--- a/_sass/pages/home-blog-projects.sass
+++ b/_sass/pages/home-blog-projects.sass
@@ -1,5 +1,6 @@
 .home,
 .blog,
+.rbasic,
 .projects
     margin-top: 125px
 
@@ -25,6 +26,7 @@
 
 .home > .list,
 .blog > .list,
+.rbasic > .list,
 .projects > .list
     > .item
         display: block
@@ -63,6 +65,7 @@
         color: $alpha
 
 .blog > .list > .item > .url,
+.rbasic > .list > .item > .url,
 .projects > .list > .item > .url
     > .title
         display: inline
